docker-registry/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: owncloud
spec:
  selector:
    matchLabels:
      app: owncloud
  template:
    metadata:
      labels:
        app: owncloud
    spec:
      containers:
      - name: owncloud
        #image: registry.tcema.tc.br/owncloud:latest
        image:  registry.example.com/cmattos/owncloud_server:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: regcred
