docker-registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: owncloud
spec:
  selector:
    app: owncloud
  ports:
  - port: 80
    targetPort: 8080
