docker-registry/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: owncloud-ingress
  labels:
    name: owncloud-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: srv02.tce.ma.gov.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: owncloud
            port: 
              number: 80
