docker-registry/ingress_versao2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressv2
  annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: owncloud
                port:
                  number: 80
          - path: /nextcloud
            pathType: Prefix
            backend:
              service:
                name: nextcloud
                port:
                  number: 80
